# rayai-platform

./: .gitignore  README.md  sqlc.yaml
.github/workflows/: supabase-ci.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  generate_types.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api/app/: __init__.py  config.py
api/app/database/: __init__.py  connection.py  helpers.py  models.py
api/app/database/adapter/: __init__.py  api_key.py  pool.py  profile.py  sandbox.py
api/app/middleware/: __init__.py  auth.py  exception_handler.py
api/app/routes/: sandboxes.py
api/app/schemas/: sandbox.py
api/app/services/: __init__.py  api_key_auth_service.py  sandbox_service.py
api/scripts/: README.md  check_docker.py  db_reset.sh  generate_types.py
api/tests/: README.md  __init__.py  conftest.py  test_health.py  test_sandbox_api.py
app/: .env.example  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
deploy/: requirements.txt
supabase/: seed.sql
supabase/migrations/: 20251107054239_initial.sql  20251108001427_create_sandbox_table.sql  20251108010000_add_onboarding_fields_to_profile.sql  20251110000001_create_api_key_table.sql
supabase/queries/: api_keys.sql  profiles.sql  sandboxes.sql
supabase/tests/: profiles_test.sql
web/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/components/: animated-background.tsx  animated-rotating-text.tsx  github-stars.tsx  posthog-pageview.tsx  posthog-provider.tsx
web/hooks/: use-feature-flag.ts
(+35 files in other folders)
